--- a/app/views/spree/wishlists/show.html.erb
+++ b/app/views/spree/wishlists/show.html.erb
@@ -1,10 +1,8 @@
-<div id="wishlist_header">
+<div id="wishlist_header" style="clear:both;margin-bottom: 30px">
   <h1><%= @wishlist.name %></h1>
   <% if @wishlist.user == spree_current_user %>
-    <div id="manage_wishlist_links">
-      <%= link_to Spree.t(:edit_wishlist), edit_wishlist_path(@wishlist), class: 'button' %>
-    </div>
-    <div><%= render partial: 'accessibility' %></div>
+    <div style="float:none"><%= render partial: 'accessibility' %></div>
+    <br/>
   <% end -%>
 </div>
 <table id="wishlist" class="table table-bordered table-hover">
@@ -18,7 +16,6 @@
       <th><%= Spree.t(:availability) %></th>
       <th><%= Spree.t(:date_added) %></th>
       <th><%= Spree.t(:price) %></th>
-      <th><%= Spree.t(:quantity) %></th>
       <th><%= Spree.t(:total) %></th>
     </tr>
   </thead>
@@ -33,8 +30,7 @@
         <p><%= link_to Spree.t(:remove_from_wishlist), wish, method: :delete, class: 'btn btn-danger' %></p>
         <%= form_for :order, url: populate_orders_url do |f| %>
           <%= hidden_field_tag 'variant_id', variant.id, size: 3 %>
-          <%= Spree.t(:quantity) %>
-          <%= number_field_tag 'quantity', wish.quantity, size: 3 %>
+          <%= hidden_field_tag 'quantity', wish.quantity, size: 3 %>
           <%= link_to Spree.t(:add_to_cart), '#', onclick: '$(this).parent().submit(); return false;', class: 'btn btn-success' %>
         <% end %>
         <% if spree_current_user.wishlists.count > 1 %>
@@ -67,12 +63,6 @@
       </td>
       <td>
         <%= display_price(variant) %>
-      </td>
-      <td>
-        <%= form_for wish do |f| %>
-          <%= f.number_field :quantity %>
-          <%= f.submit Spree.t('actions.save'), class: 'btn btn-info '  %>
-        <% end %>
       </td>
       <td>
         <%= wish.display_total %>
