--- a/app/views/spree/wishlists/show.html.erb
+++ b/app/views/spree/wishlists/show.html.erb
@@ -1,24 +1,10 @@
 <div id="wishlist_header" style="clear:both;margin-bottom: 30px">
-  <h1><%= @wishlist.name %></h1>
+  <h1 style="margin-bottom: 10px;"><%= @wishlist.name %></h1>
   <% if @wishlist.user == spree_current_user %>
     <div style="float:none"><%= render partial: 'accessibility' %></div>
-    <br/>
   <% end -%>
 </div>
 <table id="wishlist" class="table table-bordered table-hover">
-  <thead>
-    <tr>
-      <% if @wishlist.user == spree_current_user %>
-        <th><%= Spree.t(:wishlist_actions) %></th>
-      <% end -%>
-      <th><%= Spree.t(:item_view) %></th>
-      <th><%= Spree.t(:item_description) %></th>
-      <th><%= Spree.t(:availability) %></th>
-      <th><%= Spree.t(:date_added) %></th>
-      <th><%= Spree.t(:price) %></th>
-      <th><%= Spree.t(:total) %></th>
-    </tr>
-  </thead>
   <tbody id="line_items">
   <% if @wishlist.wished_products.size > 0 %>
     <% @wishlist.wished_products.each do |wish|
@@ -57,9 +43,6 @@
       </td>
       <td>
         <%= variant.can_supply? ? Spree.t(:in_stock) : Spree.t(:out_of_stock) %>
-      </td>
-      <td>
-        <%= wish.created_at.strftime '%m/%d/%Y' %>
       </td>
       <td>
         <%= display_price(variant) %>
